[gd_scene load_steps=4 format=3 uid="uid://bqw0j6ivf6qjk"]

[ext_resource type="Script" path="res://src/LevelComplete.gd" id="1_lel5p"]
[ext_resource type="LabelSettings" uid="uid://c3mern64uueqq" path="res://files/standard_label_settings.tres" id="1_si85r"]
[ext_resource type="FontFile" uid="uid://c7byak8brcjh1" path="res://files/Kenney Pixel Square.ttf" id="2_jg011"]

[node name="LevelComplete" type="Node2D"]
script = ExtResource("1_lel5p")

[node name="Label" type="Label" parent="."]
offset_left = 257.186
offset_top = 114.538
offset_right = 455.186
offset_bottom = 153.538
text = "Level ended..."
label_settings = ExtResource("1_si85r")

[node name="AgainButton" type="Button" parent="."]
offset_left = 858.681
offset_top = 273.918
offset_right = 934.681
offset_bottom = 305.918
theme_override_fonts/font = ExtResource("2_jg011")
text = "Again?"

[node name="QuitButton" type="Button" parent="."]
offset_left = 865.329
offset_top = 326.244
offset_right = 917.329
offset_bottom = 358.244
theme_override_fonts/font = ExtResource("2_jg011")
text = "Quit"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 371.755
offset_top = 319.676
offset_right = 611.755
offset_bottom = 358.676
text = "Scored 0 points"
label_settings = ExtResource("1_si85r")

[node name="OutcomeLabel" type="Label" parent="."]
offset_left = 371.033
offset_top = 260.436
offset_right = 563.033
offset_bottom = 299.436
text = "Yay! You won!"
label_settings = ExtResource("1_si85r")

[connection signal="pressed" from="AgainButton" to="." method="_on_again_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
